create offer csv

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -1316,7 +1316,7 @@
     "    employment_type = get_offer_val(offers, 'ID_koyoKeitai')    \n",
     "    employment_type_name = get_offer_val(offers, 'ID_koyoKeitaiSsinIgaiNoMeisho')    \n",
     "    promotion_fulltime_possibility = get_offer_val(offers, 'ID_koyoKeitaiSsinNoUmu')    \n",
-    "    promotion_fulltime_track_record = get_offer_val(offers, 'ID_koyoKeitaiSsinJisseki')    \n",
+    "    promotion_fulltime_record = get_offer_val(offers, 'ID_koyoKeitaiSsinJisseki')    \n",
     "    employment_haken_ukeoi = get_offer_val(offers, 'ID_hakenUkeoiToShgKeitai')    \n",
     "    worker_dispatch_business_permit_number = get_offer_val(offers, 'ID_hakenUkeoiToRdsha')    \n",
     "    employment_term_limit = get_offer_val(offers, 'ID_koyoKikan')    \n",
@@ -1380,7 +1380,7 @@
     "    payment_month= get_offer_val(offers, 'ID_chgnSrbiTsuki')\n",
     "    payment_day= get_offer_val(offers, 'ID_chgnSrbiHi')\n",
     "    salary_raise= get_offer_val(offers, 'ID_shokyuSd')\n",
-    "    salary_raise_track_record = get_offer_val(offers, 'ID_shokyuMaeNendoJisseki')\n",
+    "    salary_raise_record = get_offer_val(offers, 'ID_shokyuMaeNendoJisseki')\n",
     "    salary_raise_rate = get_offer_val(offers, 'ID_sokkgSkrt')\n",
     "    bonus = get_offer_val(offers, 'ID_shoyoSdNoUmu')\n",
     "    bonus_previous_year = get_offer_val(offers, 'ID_shoyoMaeNendoUmu')\n",
@@ -1441,7 +1441,7 @@
     "    achievement_nursing_care_leave = get_offer_val(offers, 'ID_kaigoKyugyoStkJisseki')\n",
     "    achievement_nursing_leave = get_offer_val(offers, 'ID_kangoKyukaStkJisseki')\n",
     "    foreigners_employment = get_offer_val(offers, 'ID_gkjnKoyoJisseki')\n",
-    "    uji_turn = get_offer_val(offers, 'ID_saiyoNinsu')\n",
+    "    uji_turn = get_offer_val(offers, 'ID_uIJTurn')\n",
     "    \n",
     "\n",
     "    # 選考等\n",
@@ -1490,7 +1490,9 @@
     "    training_parttime_available = get_offer_val(offers, 'ID_knsSdNoSsinIgaiNoRiyo')\n",
     "    \n",
     "    # 障害者に対する配慮に関する状況\n",
-    "    for_handicapped_elevator = get_offer_val(offers, 'ID_elevator')"
+    "    for_handicapped_elevator = get_offer_val(offers, 'ID_elevator')\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -1500,6 +1502,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "# driver close, quit\n",
     "driver.close()\n",
     "driver.quit()"
